--- a/src/App.css
+++ b/src/App.css
@@ -66,6 +66,8 @@ line-height: 1;
 .pic{
   background-size: cover;
   overflow: hidden;
+  background-image: url('/images/bg-intro-phone.svg');
+  background-position: left 0px bottom 160px;
 }
 
 .main-pic{
@@ -80,7 +82,8 @@ line-height: 1;
   padding-right: 100px;
   padding-top: 30px;
   padding-bottom: 30px;
-  
+  margin-top: -20px;
+  overflow: auto;
 }
 
 .choose-top{
@@ -137,12 +140,13 @@ line-height: 1.75rem;
 
 .article-img{
   width: 250px;
+  height: 200px;
   border-radius: 0.375rem;
 }
 
 .article-cardbody{
   padding-left: 20px;
-  padding-right: 20px;
+  padding-right: 30px;
 }
 
 .auther{
@@ -161,5 +165,52 @@ line-height: 1.75rem;
   color: rgb(148 163 184);
   font-size: 1rem; /* 16px */
   line-height: 1.5rem; 
+}
+
+.footer{
+  display: grid;
+  grid-template-columns: repeat(3, minmax(0, 1fr));
+  background-color: rgb(23 37 84);
+  padding-top: 40px;
+  padding-bottom: 40px;
+  padding-left: 100px;
+  padding-right: 100px;
+}
+
+.footer-icons{
+  display: grid;
+  row-gap: 40px;
+}
+
+.footer-img{
+  width: 150px;
+}
+
+.icons{
+  display: flex;
+  column-gap: 20px;
+  
+}
+
+.iconimage{
+width: 30px;
+height: 20px;
+}
+
+.info{
+  display: flex;
+  justify-content: space-between;
+  color: rgb(148 163 184);
+
+}
+
+.footer-license{
+  display: grid;
+  text-align: end;
+  color: white;
+}
+
+.license{
+  color: rgb(100 116 139);
 }
 
